network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-isolation-network-policy
  namespace: gitops-template
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aks-istio-ingress
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: app-routing-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dataprotection-microsoft
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gatekeeper-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gitops-template
